test/classes/initializers/inheritance/inheritedInitWrongName.good
inheritedInitWrongName.chpl:20: error: unresolved call '_new(type D, x=3, "hi", 4.6)'
inheritedInitWrongName.chpl:1: note: candidates are: _new(type chpl_t, x, y, z)
inheritedInitWrongName.chpl:14: note:                 _new(type chpl_t, a, b, c)
deleted module lines
