test/classes/initializers/inheritance/inheritedInitWrongName.bad
inheritedInitWrongName.chpl:20: error: type mismatch in assignment from C to D
deleted module lines
